--- a/gb/18/4/20/n10321664.md
+++ b/gb/18/4/20/n10321664.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pdz229/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pdz229/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pdz229/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pdz229/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/pdz229/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pdz229/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pdz229/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pdz229/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>芝侨界吁支持台湾参加2018世界卫生大会</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/04/DSC04464-600x400.jpg" />
 <h6>4月18日芝加哥侨界举行记者会，呼吁支持台湾参加2018世界卫生大会。（唐明镜/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2018年04月20日讯】（大纪元记者唐明镜芝加哥报导）今年5月21～26日将在日内瓦举行第71届<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E5%A4%A7%E4%BC%9A.md#1">世界卫生大会</a>（World Health Assembly, WHA），台湾迄今未接到邀请。这是继2017年连续第二年未获邀。芝加哥侨界4月18日在侨教中心举行记者会，<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E5%91%BC%E5%90%81.md#1">呼吁</a>各界联署<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E5%8F%B0%E6%B9%BE.md#1">支持台湾</a>参加WHA。<br />
+	<p>【大纪元2018年04月20日讯】（大纪元记者唐明镜芝加哥报导）今年5月21～26日将在日内瓦举行第71届<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E5%A4%A7%E4%BC%9A.md#1">世界卫生大会</a>（World Health Assembly, WHA），台湾迄今未接到邀请。这是继2017年连续第二年未获邀。芝加哥侨界4月18日在侨教中心举行记者会，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%91%BC%E5%90%81.md#1">呼吁</a>各界联署<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E5%8F%B0%E6%B9%BE.md#1">支持台湾</a>参加WHA。<br />
 　　 　　<br />
-驻芝台北经文处处长黄钧耀4月15日在俄亥俄州“论坛纪事报”（Tribune Chronicle） 投书说：往年台湾都以观察员身份参加世界卫生组织（WHO）各项活动和<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E5%A4%A7%E4%BC%9A.md#1">世界卫生大会</a>，如果说2017年台湾突然未获邀参加世卫大会是一个差错的话，今年再度被排除在外则是“不正确，亦不可接受的”。<br />
+驻芝台北经文处处长黄钧耀4月15日在俄亥俄州“论坛纪事报”（Tribune Chronicle） 投书说：往年台湾都以观察员身份参加世界卫生组织（WHO）各项活动和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E5%A4%A7%E4%BC%9A.md#1">世界卫生大会</a>，如果说2017年台湾突然未获邀参加世卫大会是一个差错的话，今年再度被排除在外则是“不正确，亦不可接受的”。<br />
 　　 　　<br />
 台湾大学校友会会长陈子坤医生在记者会上介绍说，世界卫生组织隶属联合国，但具体决策则是由日内瓦的一个机构制定，那就是世界卫生大会（WHA）。在中共的制约下，台湾不是联合国成员国，也不是WHO成员国，但历年都以观察员身份参加WHA，与国际社会分享疾病讯息。“作为一名医生，我认为医疗应该是无国界的，不能只限制哪些国家有权利，哪些没有。我们还是需要加入WHO，获得最新的医疗资讯。”<br />
 　　 　　<br />
 陈子坤透露，最近一名台湾人乘坐虎航到日本，被发现患有麻疹，很快传染了56人。台湾不是WHO成员国，就无法和世界各国及时分享疫情。<br />
 　　 　　<br />
-4月18日，在中华民国侨务委员李香兰的召集下，芝加哥二十多个侨团发表声明<ahref="https://github.com/pdz229/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E5%8F%B0%E6%B9%BE.md#1">支持台湾</a>道：“台湾位于东亚枢纽，与邻近国家传染病发生态样相似，且人员往来频繁，相较于WHO会员国，台湾取得疫病及医卫资讯之时效多有延宕，形成全球卫生安全体系及健康人权的严重缺口。”<br />
+4月18日，在中华民国侨务委员李香兰的召集下，芝加哥二十多个侨团发表声明<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%AF%E6%8C%81%E5%8F%B0%E6%B9%BE.md#1">支持台湾</a>道：“台湾位于东亚枢纽，与邻近国家传染病发生态样相似，且人员往来频繁，相较于WHO会员国，台湾取得疫病及医卫资讯之时效多有延宕，形成全球卫生安全体系及健康人权的严重缺口。”<br />
 　　 　　<br />
 声明说：“此外，现今各国食品的生产使用来自世界各地的原料，台湾作为2016年世界货品贸易第18大出口国和第18大进口国，如果被排除于全球卫生体系之外，恐将对全球食品安全造成威胁。”<br />
 　　 　　<br />
@@ -31,36 +31,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/19/n9159257.md#1">美麻州及佛蒙特州众议员吁世卫邀台与会</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/20/n9163024.md#1">加国外长支持台湾参与WHA</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/20/n9164561.md#1">多伦多台湾侨界及医师团体吁国际支持台湾参加世卫会</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/22/n9167613.md#1">参与WHA铩羽 台卫福部长吁国际施压中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/19/n9159257.md#1">美麻州及佛蒙特州众议员吁世卫邀台与会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/20/n9163024.md#1">加国外长支持台湾参与WHA</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/20/n9164561.md#1">多伦多台湾侨界及医师团体吁国际支持台湾参加世卫会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/22/n9167613.md#1">参与WHA铩羽 台卫福部长吁国际施压中共</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/pdz229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12087962.md#1">中共领导人长命之谜 靠的是什么？</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12089308.md#1">对抗中共肺炎逾百日 陈时中坦言有“三大失算”</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12087990.md#1">【新闻看点】中共鹰派突变调 承认攻台两大困境</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088005.md#1">“勒紧裤带过日子” 大陆年轻人流行卖卖卖</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088248.md#1">全球调查 专家：中共高层忧“世纪之罪”曝光</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082975.md#1">“雷神”为巨石强森庆生 石头蛋糕笑翻网友</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12085409.md#1">传遭官方禁止直播卖货 范冰冰公开回应</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088319.md#1">《战狼》片方高管内讧 原副董事长出逃海外</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/7/n12089652.md#1">崔智友临盆在即 疫情中为高龄产妇加油</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/6/n12088665.md#1">张达明历经九年抗癌路 首夺金像奖最佳男配角</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/5/n12083937.md#1">美国女童写信给在天堂的小狗 意外收到回信</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/4/n12082623.md#1">唐朝进士奇闻：耳朵里的天国世界</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/25/n12061145.md#1">赵盾一梦“兆绝后好” 满门被灭 孤儿独好</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/4/29/n12068903.md#1">【细语人生】FBI盯上了他（下）</a></li>
-<li><a href="https://github.com/pdz229/djy/blob/master/gb/20/5/3/n12079653.md#1">【爱丽话五千】古代医书里的各种防疫奇招</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pdz229/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/20/n10321664.htm">芝侨界吁支持台湾参加2018世界卫生大会</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/20/n10321664.htm">芝侨界吁支持台湾参加2018世界卫生大会</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/pdz229/djy/blob/master/gb/18/4/20/n10321664.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pdz229/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pdz229/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pdz229/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pdz229/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/4/20/n10321664.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
